Code cleanup.